--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</article>
+		<article>
+			<h1>Articulo nuevo</h1>
+			<hr>
+			<p>
+				Este articulo no sirve para nada, solo está para probar las funciones de git, así que mucho amor para todos.
+			</p>
+		</article>
 	</main>
 
 	<script type="text/javascript" src="js/jquery.min.js"></script>
