se agrego boton de bano

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 				<a href=""><i class="fa fa-home" aria-hidden="true"></i> Noticias</a>
 				<a href=""><i class="fa fa-briefcase" aria-hidden="true"></i> Portafolio</a>
 				<a href=""><i class="fa fa-bolt" aria-hidden="true"></i> Energia</a>
+				<a href=""><i class="fa fa-bath" aria-hidden="true"></i>Bano</a>
+
 			</div>
 		</nav>
 	</header>
