se agrego hober de logo, cambio de hover en botones, agregrego boton de github

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<a href=""><i class="fa fa-briefcase" aria-hidden="true"></i> Portafolio</a>
 				<a href=""><i class="fa fa-bolt" aria-hidden="true"></i> Energia</a>
 				<a href=""><i class="fa fa-bath" aria-hidden="true"></i>Bano</a>
+				<a href=""><i class="fa fa-github" aria-hidden="true"></i>GitHub</a>
 
 			</div>
 		</nav>
