se agrega boton linkedin

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a href=""><i class="fa fa-home" aria-hidden="true"></i> Inicio</a>
 				<a href=""><i class="fa fa-home" aria-hidden="true"></i> Noticias</a>
 				<a href=""><i class="fa fa-briefcase" aria-hidden="true"></i> Portafolio</a>
-				<a href=""><i class="fa fa-bolt" aria-hidden="true"></i> Energia</a>
+				<a href=""><i class="fa fa-linkedin" aria-hidden="true"></i> Linkedin</a>
 				<a href=""><i class="fa fa-instagram" aria-hidden="true"></i>instagram</a>
 				<a href=""><i class="fa fa-github" aria-hidden="true"></i>GitHub</a>
 
