nuevo articulo agregado: articulo de alfonso

--- a/index.html
+++ b/index.html
@@ -125,6 +125,13 @@
 				Este articulo no sirve para nada, solo está para probar las funciones de git, así que mucho amor para todos.
 			</p>
 		</article>
+		<article>
+			<h1>Articulo nuevo de halfonso</h1>
+			<hr>
+			<p>
+				Hola soy alfonso y me gusta el chocolate
+			</p>
+		</article>
 	</main>
 
 	<script type="text/javascript" src="js/jquery.min.js"></script>
