cambio del primer articulo a 'articulo lorem'

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<main>
 		<article>
-			<h1>Articulo de prueba</h1>
+			<h1>Articulo lorem</h1>
 			<hr>
 			<p>En la fase de maquetación de un documento o una página web o para probar un tipo de letra es necesario visualizar el aspecto del diseño. En este momento se necesita un contenido sobre el que aplicar el formato para obtener esta muestra. Cualquier texto puede utilizarse con este cometido, puesto que lo importante es el aspecto no el significado y será reemplazado en la versión final.</p>
 			<p>Sin embargo, existe un texto que se utiliza desde la invención de la imprenta con este fin. Este texto se conoce como lorem ipsum, o abreviado lipsum. Se trata de un texto escrito en latín compuesto de fragmentos de un manuscrito escrito por Cicero en el año 45 a.C. Evidentemente, carece de significado por lo que se centra la atención en el diseño en lugar del contenido.</p>
