--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 			<div class="enlaces" id="enlaces">
 				<a href=""><i class="fa fa-home" aria-hidden="true"></i> Inicio</a>
-				<a href=""><i class="fa fa-home" aria-hidden="true"></i> Noticias</a>
+				<a href=""><i class="fa fa-newspaper-o" aria-hidden="true"></i> Noticias</a>
 				<a href=""><i class="fa fa-briefcase" aria-hidden="true"></i> Portafolio</a>
 				<a href=""><i class="fa fa-linkedin" aria-hidden="true"></i> Linkedin</a>
 				<a href=""><i class="fa fa-instagram" aria-hidden="true"></i>instagram</a>
